@@ -1141,10 +1141,10 @@ initpycurl(void)
     insint_c(d, "PAUSE_ALL",  CURLPAUSE_ALL);
     insint_c(d, "PAUSE_CONT", CURLPAUSE_CONT);
 
+#ifdef HAVE_CURL_7_19_5_OPTS
     /* CURL_SEEKFUNC: return values for seek function */
     insint_c(d, "SEEKFUNC_OK", CURL_SEEKFUNC_OK);
     insint_c(d, "SEEKFUNC_FAIL", CURL_SEEKFUNC_FAIL);
-#ifdef HAVE_CURL_7_19_5_OPTS
     insint_c(d, "SEEKFUNC_CANTSEEK", CURL_SEEKFUNC_CANTSEEK);
 #endif
 
